    2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.2 or higher is required
    2. JavaScript support does not include document.write and some DOM properties


Revision History:
29-Aug-2002
Acknolwedgements:
    Thanks to Geert Bevin for implementing ServletUnit support for HttpServletRequest.getParameterMap

Additions:
    1. ServletUnit now supports HttpServletRequest.getParameterMap
    2. WebImage now supports getRequest() to return a request for retrieving the image

Problems fixed:
    1. Submitting a request created with parameter validation disabled would send disabled parameters as well as enabled ones.
    2. WebRequest.getRequestParameterNames now returns only the names of the parameters that will be submitted with the request.

27-Aug-2002
Additions:
    1. Reset buttons may now be clicked to reset the form
    2. WebForm supports getButtonWithID
    3. JavaScript: Form now supports reset() and onReset event.

23-Aug-2002
Additions:
    1. javascript URLs are now supported.

22-Aug-2002

Acknowledgements:
    Thanks to Michael Reardon for implementing the ServletUnit header method handling code and session.getAttributeNames
    Thanks to Geert Bevin for finding and fixing the ServletUnit POST parameters bug.

Additions:
    1. ServletUnit now supports HttpServletResponse header methods: setHeader, addHeader, setIntHeader, addIntHeader,
       setDateHeader, and addDateHeader.
    2. ServletUnit now supports HttpSession.getAttributeNames.
    3. WebImage now supports a read-only 'altText' property.
    4. WebResponse and TableCell now support getImageWithAltText to find an image with a specified value in its 'alt' attribute.

Problems fixed:
    1. ServletUnit was not recognizing form parameters on a POST request which contained a query string in the URL.

21-Aug-2002

Additions: